<resources>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="app_name">بسپارین</string>
    <string name="update">به روز رسانی</string>
    <string name="action_settings">تنظیمات</string>
    <string name="Logo_name">همیار</string>
    <string name="Phone_Number">شماره همراه</string>
    <string name="Send">ارسال</string>
    <string name="accep_code">کد تایید</string>
    <string name="firstname">نام</string>
    <string name="lastname">نام خانوادگی</string>
    <string name="education">تحصیلات</string>
    <string name="Expertise">تخصص ها</string>
    <string name="brithday">تاریخ تولد</string>
    <string name="Profile">حساب کاربری</string>
    <string name="Yourcommitment">تعهدات شما</string>
    <string name="Ourcommitment">تعهدات ما</string>
    <string name="Messages">پیام  ها</string>
    <string name="GiftBank">بانک هدیه</string>
    <string name="Contact">تماس با پشتیبانی</string>
    <string name="Help">راهنما</string>
    <string name="About">درباره ما</string>
    <string name="Exit">خروج از برنامه</string>
    <string name="Logout">خروج از حساب کاربری</string>
    <string name="Login">ورود</string>
    <string name="Job">لیست درخواست های رسیده</string>
    <string name="Duty">فرصت های شغلی امروز</string>
    <string name="Select">انتخاب</string>
    <string name="Cansel">لغو</string>
    <string name="PerFactor">پیش فاکتور</string>
    <string name="Pause">وقفه</string>
    <string name="Visit">بازدید</string>
    <string name="Resume">ادامه کار</string>
    <string name="Final">اتمام کار</string>
    <string name="MainMenuTitle">بسپارینا کارشناس آنلاین خدمات - همیار</string>
    <string name="StepJob">مراحل کاری</string>
    <string name="StepJobdetaile">ملزومات کاری</string>
    <string name="Save">ثبت</string>
    <string name="titleStep">عنوان کاری</string>
    <string name="PriceJob">کارمزد</string>
    <string name="Unit">واحد</string>
    <string name="UnitPrice">هزینه هر واحد</string>
    <string name="StepJobDetaile">ملزومات کاری</string>
    <string name="titleToolsStep">لوازم مصرفی</string>
    <string name="Brand">برند</string>
    <string name="PriceTools">قیمت</string>
    <string name="Credits">اعتبارات</string>
    <string name="Delete">حذف</string>
    <string name="RefreshAcceptCode">دریافت مجدد کد تایید</string>
    <string name="TextAbout">شرکت  خدمات گستر همیاران آرینا، با هدف بهبود روند خدمات رسانی به هموطنان عزیز و با در نظر گرفتن تمامی نیاز ها و جنبه های کاری، زبده ترین تیم های تخصصی را گرد هم آورده تا ضمن ایجاد اشتغال و ساماندهی بازار کار، بتواند با کیفیت ترین خدمات را در کوتاه ترین زمان ممکن به مشترکین خود ارائه دهد. گروه خدماتی بسپارینا با در اختیار داشتن نیروهای خلاق و مبتکر و کار شبانه روزی این سیستم هوشمند را طراحی و با افتخار در اختیار شما عزیزان قرارداده است. بسپارینا افزون بر کاهش هدر روی زمان و دوباره کاری، هزینه های اضافی و غیر ضروری را از فرآیند سفارش مشتری حذف و همیاران قابل اعتماد خود را به چرخه انجام خدمات معرفی می‌نماید. </string>
    <string name="TextYourCommitment">همیاران محترم، از آنجایی که مشتری‌ مداری یکی از چشم انداز ها و اهداف اصلی بسپارینا می‌باشد؛ مواردی را به شرح ذیل به استحضارمی رساند\n امیدواریم با رعایت نکات زیر در راستای اعطلای اهداف شرکت و رسیدن به نهایت سطح کیفی ما را همراهی فرمایید\n
1-	رعایت نظم و انضباط کاری\n
2-	رعایت شئونات اخلاقی\n
3-	رعایت نظافت و آراستگی\n
4-	رعایت اصول ایمنی در تمامی مراحل کاری\n
5-	پایبندی به اصول بسپارینا\n
6-	سعی و تلاش در انجام خدمات به شایسته‌ترین راه ممکن و انجام کار با بالاترین کیفیت \n
7-	اطلاع رسانی کامل به مشتریان در خصوص فرآیند کاری و  ارائه توضیحات لازم \n
8-	اعلام هزینه‌های خدمات مورد نیاز مشتری و ارائه توضیحات کامل و شفاف سازی هزینه های پیش‌بینی شده احتمالی  \n
9-	تلاش برای جلب رضایت مشتری\n
10-	 انجام کار و پایبندی به روال مشخص شده در بسپارینا\n
11-	صدور فاکتور مطابق با نرخ نامه های مصوب اصناف\n
12-	تسویه حساب  با استفاده از روش‌های پیش‌بینی شده در نرم افزار \n
13-	پرهیز از هر نوع بحث و جدل بی‌مورد با مشتری و ارجاع این موارد به تیم پشتیبانی\n
14-	هماهنگی کامل با تیم پشتیبانی در موارد اضطراری\n
15-	عدم لغو بی‌مورد سرویس‌ها (تنها در موارد اضطراری و با هماهنگی پشتیبانی)\n
</string>
    <string name="TextOurCommitment">1-	بسپارینا با اخذ مجوزهای لازم و بهره‌مندی از برترین تیم‌های کارشناسی، در راستای ایجاد اشتغال و بالا بردن سطح بهره‌وری در خدمت همیاران خود می باشد و برای بالابردن سطح رضایتمندی همیاران خود از هیچ کوششی دریغ نخواهد کرد\n
2-	بسپارینا در راستای مشخص نمودن اهداف شرکت و یکپارچه‌سازی همیاران خود، دوره های آموزشی-توجیهی مورد نیاز را برای همیاران خود برگزار می نماید\n
3-	 بسپارینا افتخار دارد با کارآمدترین روش‌های تبلیغاتی و شناخت بازار، فرصتهای شغلی مناسب را جهت همیاران خود فراهم نموده و  در کمترین زمان ممکن اطلاع رسانی نماید\n
4-	در راستای آسودگی خاطر همیاران محترم، بسپارینا ضمن تدوین آئین‌نامه و روش اجرایی، مشتریان خود را ملزم به پایبندی به مقررات و دستور العملها نموده و از بروز مشکلات احتمالی جلوگیری می‌نماید\n
5-	تیم پشتیبانی و کارشناسان خبره بسپارینا در همه مراحل از ثبت سفارش تا انجام کار، مرحله به مرحله پاسخگوی سوالات همیاران خود می باشد\n
6-	تیم پشتیبانی از زمان شروع انجام خدمات تا پایان کار همراه همیاران خود بوده و گام به گام بر تمام مراحل اجرایی نظارت دارد\n
7-	یک نسخه از تمامی فاکتورهای صادره در اختیار کارشناسان بسپارینا قرار می گیرد تا در صورت بروز هر گونه مشکل در روند تسویه حساب از خدمات حمایتی تیم پشتیبانی بهره مند شوید\n
8-	بسپارینا بعد از پایان انجام خدمات، کار انجام شده را ارزیابی نموده و همیاران خود را مورد تقدیر و تشویق قرار می دهد\n
9-	پس از اتمام هر سرویس و دریافت نظرات و میزان رضایتمندی مشتریان امتیازی را برای همیاران در نظر گرفته خواهد شد و اعتبار اخذ شده به بانک جوایز همیاران واریز خواهد شد\n
</string>
    <string name="ListVisit">بازدیدهای ثبت شده</string>
    <string name="servicename">نام سرویس</string>
    <string name="ServiDetailName">نوع سرویس</string>
    <string name="Add">افزودن</string>
    <string name="Add_List">افزودن به لیست</string>
    <string name="FinalSave">ثبت نهایی</string>
    <string name="value">تعداد</string>
    <string name="TitleTools">عنوان ملزومات</string>
    <string name="CheckTitleTool">آیا ملزومات خود را ثبت می کنید؟</string>
    <string name="Description">توضیحات</string>
    <string name="Total">جمع</string>
    <string name="CaseResume">علت وقفه</string>
    <string name="CasePause">علت وقفه</string>
    <string name="CodeMoaref">کد معرف</string>
    <string name="service">سرویس</string>
    <string name="credites">اعتبارات</string>
    <string name="credite">اعتبار</string>
    <string name="home">خانه</string>
    <string name="DutyItem">وظایف</string>
    <string name="RecentCredit">میزان اعتبار</string>
    <string name="IncreseCredit">افزایش اعتبار</string>
    <string name="History">تاریخچه خدمات</string>
    <string name="RelateUs">به ما بپیوندید!</string>
    <string name="telegram">تلگرام</string>
    <string name="instagram">اینستاگرام</string>
    <string name="SignUp">ثبت نام</string>
    <string name="NotMessage">پیغامی موجود نیست</string>
    <string name="Orders">درخواست ها</string>
    <string name="SendMessage">ارسال پیام</string>
    <string name="InfoContent">اطلاعات تماس</string>
    <string name="Call">برقراری تماس</string>
    <string name="MessageText">متن پیام</string>
    <string name="ListGift">لیست هدایا</string>
    <string name="ListMessages">لیست پیام های دریافتی</string>
    <string name="Message">پیام</string>
    <string name="usercode">کد کاربری</string>
    <string name="cash">پرداخت</string>
    <string name="CurrencyInsertCredit">افزایش اعتبار (تومان)</string>
    <string name="CallToCastumer">تماس با متقاضی</string>
    <string name="Invite_friends">دعوت از دوستان</string>
    <string name="rial">ریال</string>
    <string name="Addres">آدرس</string>
    <string name="edit">ویرایش</string>
    <string name="Email">ایمیل</string>
    <string name="FromDate">از تاریخ</string>
    <string name="ToDate">تا تاریخ</string>
    <string name="FromTime">از ساعت</string>
    <string name="ToTime">تا ساعت</string>
    <string name="Area">نام محله</string>
    <string name="Expert">تخصص</string>
    <string name="Filter">فیلتر</string>
    <string name="LoginGuest">ورود مهمان</string>
    <string name="SignUpOrLogin">ثبت نام / ورود</string>
    <string name="Gender">جنسیت</string>
    <string name="man">مرد</string>
    <string name="woman">زن</string>
    <string name="DutyToday">فرصت های امروز</string>
    <string name="Services_at_the_turn">خدمات در نوبت</string>
    <string name="Line">----------------------------</string>
    <string name="Credits_History">لیست اعتبارات</string>
    <string name="CrediteCode">کد اعتباری</string>
    <string name="DatePause">تاریخ شروع وقفه</string>
    <string name="TimePause">زمان شروع وقفه</string>
    <string name="Save_working_levels">ثبت مراحل کاری</string>
    <string name="Save_working_Details">ثبت ملزومات کاری</string>
    <string name="date">تاریخ</string>
    <string name="From">از</string>
    <string name="To">تا</string>
    <string name="clock">ساعت</string>
    <string name="Location">محله</string>
    <string name="Customer">متقاضی</string>
    <string name="NameCustomer">نام متقاضی:</string>
    <string name="Date">تاریخ:</string>
    <string name="Time">ساعت کار:</string>
    <string name="Address">محله:</string>
    <string name="Emergency">فوریت:</string>
    <string name="Status">وضعیت:</string>
    <string name="SavedAddres">ثبت آدرس</string>
    <string name="DateStart">تاریخ شروع:</string>
    <string name="DateEnd">تاریخ پایان:</string>
    <string name="PeriodAndEmergency">خدمات دوره ای / فوریت</string>
    <string name="CountHamyar">تعداد همیاران:</string>
    <string name="Learning">عنوان آموزش:</string>
    <string name="TitleGraid">پایه تحصیلی:</string>
    <string name="TitleFieldEducation">رشته تحصیلی:</string>
    <string name="TitleFieldArt">رشته هنری:</string>
    <string name="TitleGenderStudent">جنسیت دانش آموز:</string>
    <string name="TitleGenderTeacher">جنسیت معلم:</string>
    <string name="TitleCarWashType">نوع سرویس:</string>
    <string name="TitleCarType">نوع ماشین:</string>
    <string name="TitleLanguage">زبان:</string>
    <string name="DescriptionTitle">توضیحات:</string>
    <string name="LocationTitle">محله:</string>
    <string name="Period">خدمات دوره ای:</string>
    <string name="DetailePage">جزئیات فرصت شغلی</string>
    <string name="Time2">ساعت:</string>
    <string name="Location2">محله:</string>
    <string name="search">جستجو</string>
    <string name="Description2">توضیحات:</string>
    <string name="SelectTime">انتخاب زمان</string>
    <string name="Accept">تایید</string>
    <string name="showfactor">نمایش فاکتور</string>
    <string name="EditPerFactor">ویرایش پیش فاکتور</string>
    <string name="serviceNow">سرویس فعلی</string>
    <string name="Unit1">واحد سنجش:</string>
    <string name="TitleBrand">عنوان برند:</string>
    <string name="TypeService">نوع سرویس:</string>
    <string name="default_notification_channel_id">Besparina_Karbar</string>
    <string name="default_notification_channel_title">بسپارینا</string>
    <string name="UnitPriceAndUnit">واحد/هزینه هر واحد:</string>
    <string name="FinalSavePerFactor">ثبت پیش فاکتور</string>
    <string name="Cansel2">انصراف</string>
    <string name="clear">حذف فیلتر</string>
    <string name="TotalAll">جمع کل:</string>
</resources>
