<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/menu_body"
    android:orientation="vertical"
    android:layoutDirection="rtl">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/StepJob"
            app:titleTextColor="#000000"
            android:background="@drawable/background_actionbar"/>
    </android.support.design.widget.AppBarLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_layout_job_title"
        android:id="@+id/linearLayout"
        android:orientation="vertical"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/appbar">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:textColor="#000000"
                android:id="@+id/tvtitleServiDetailName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ServiDetailName"
                android:layout_marginRight="5dp"
                android:layout_weight="0"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ServiceName"
                android:layout_weight="1"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:textColor="#000000"
                android:id="@+id/tvtitleStepServise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/servicename"
                android:layout_marginRight="5dp"/>
            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/ServiDetailName"
                android:layout_weight="1"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:textColor="#000000"
                android:id="@+id/tvtitleStep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titleStep"
                android:layout_marginRight="5dp"
                android:layout_weight="0"/>
            <EditText
                android:id="@+id/EttitleStep"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <TextView
                android:textColor="#000000"
                android:id="@+id/tvUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Unit"
                android:layout_marginRight="5dp"
                android:layout_weight="0"/>
            <Spinner
                android:id="@+id/SpUnit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <TextView
                android:textColor="#000000"
                android:id="@+id/tvUnitPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/UnitPrice"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="0"/>
            <EditText
                android:id="@+id/EtUnitPrice"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_edittext"
                android:inputType="number"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"/>
            <TextView
                android:textColor="#000000"
                android:id="@+id/tvVahed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rial"
                android:layout_gravity="center"
                android:gravity="center"
                android:layout_weight="0"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <Button
                android:id="@+id/btnSaveStepJob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Add"
                android:drawableLeft="@drawable/add"
                android:background="@drawable/rounded_button"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:textColor="#000000"/>

            <Button
                android:id="@+id/btnSendStepJob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/FinalSave"
                android:drawableLeft="@drawable/save"
                android:background="@drawable/rounded_button"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:textColor="#000000"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <ListView
                android:textColor="#000000"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="65dp"
                android:id="@+id/ListViewSaveSetp">
            </ListView>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/btnHome"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_bottom"
            android:drawableTop="@drawable/home"
            android:text="@string/home"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/btnOrders"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_bottom"
            android:drawableTop="@drawable/history"
            android:text="@string/Orders"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/btnCredit"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_bottom"
            android:drawableTop="@drawable/credit"
            android:text="@string/credite"/>
    </LinearLayout>
</RelativeLayout>