<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/menu_body"
    android:layoutDirection="rtl">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/Ourcommitment"
            app:titleTextColor="#000000"
            android:background="@drawable/background_actionbar"/>
    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="60dp"
        android:verticalScrollbarPosition="right">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/rounded_layout_select_job_body">
            <TextView
                android:id="@+id/tvTextOurcommitment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:text="@string/TextOurCommitment"
                android:lineSpacingExtra="4dp"
                android:textSize="18dp"
                android:textColor="#000000"/>
        </LinearLayout>
    </ScrollView>
    <!--<FrameLayout-->
        <!--android:id="@+id/frame"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:background="@drawable/background_actionbar" />-->

    <!--<android.support.design.widget.BottomNavigationView-->
        <!--android:id="@+id/bottomNavigationView"-->
        <!--style="@style/BottomNavigation"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--app:menu="@menu/bottom_menu"-->
        <!--android:layout_alignParentBottom="true"/>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/btnHome"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_bottom"
            android:drawableTop="@drawable/home"
            android:text="@string/home"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/btnDutyToday"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_bottom"
            android:drawableTop="@drawable/calendar"
            android:text="@string/DutyToday"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/btnServices_at_the_turn"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_bottom"
            android:drawableTop="@drawable/clock"
            android:text="@string/Services_at_the_turn"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/btnCredit"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_bottom"
            android:text="@string/credite"/>
    </LinearLayout>
</RelativeLayout>
