<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/menu_body"
    android:layoutDirection="rtl">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/Messages"
            android:background="@drawable/background_actionbar"/>
    </android.support.design.widget.AppBarLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:verticalScrollbarPosition="right">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="80dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_layout_select_job_body">
            <TextView
                android:id="@+id/tvContentMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:textColor="#000000"
                android:layout_marginTop="20dp" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:weightSum="5"
                android:layout_gravity="left">

                <Button
                    android:id="@+id/btnDelete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_button_select"
                    android:text="@string/Delete"
                    android:textColor="#000000"
                    />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <!--<FrameLayout-->
    <!--android:id="@+id/frame"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:background="@drawable/background_actionbar" />-->

    <!--<android.support.design.widget.BottomNavigationView-->
    <!--android:id="@+id/bottomNavigationView"-->
    <!--style="@style/BottomNavigation"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--app:menu="@menu/bottom_menu"-->
    <!--android:layout_alignParentBottom="true"/>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/btnHome"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_bottom"
            android:drawableTop="@drawable/home"
            android:text="@string/home"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/btnDutyToday"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_bottom"
            android:drawableTop="@drawable/calendar"
            android:text="@string/DutyToday"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/btnServices_at_the_turn"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_bottom"
            android:drawableTop="@drawable/clock"
            android:text="@string/Services_at_the_turn"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/btnCredit"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_bottom"
            android:text="@string/credite"/>
    </LinearLayout>
</RelativeLayout>
