<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/menu_body"
    android:layoutDirection="rtl">
    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.AppBarOverlay">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:layout_scrollFlags="scroll|enterAlways"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/MainMenuTitle"
            app:titleTextColor="@color/md_black_1000"
            app:titleTextAppearance="@style/TextAppearance.Medium"
            android:layout_gravity="right"
            android:gravity="right"
            android:background="@drawable/background_actionbar">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/logo"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"/>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/appbar"
        android:id="@+id/LinearSlidShow">
        <com.project.it.hamyar.Custom_ViewFlipper
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:inAnimation="@anim/right_in"
            android:outAnimation="@anim/left_out"
            android:flipInterval="5000"
            android:autoStart="true"
            android:id="@+id/vf">

        </com.project.it.hamyar.Custom_ViewFlipper>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LinearSlidShow"
        android:gravity="center"
        android:foregroundGravity="center"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="10dp">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnDuty"
            android:layout_weight="1"
            android:text="@string/Duty"
            android:drawableTop="@drawable/duty"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnServices"
            android:layout_weight="1"
            android:text="@string/Job"
            android:drawableTop="@drawable/job"/>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <!--<android.support.design.widget.BottomNavigationView-->
    <!--android:id="@+id/bottomNavigationView"-->
    <!--style="@style/BottomNavigation"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="wrap_content"-->
    <!--app:menu="@menu/bottom_menu"-->
    <!--android:layout_alignParentBottom="true"/>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/btnHome"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_bottom"
            android:drawableTop="@drawable/home"
            android:text="@string/home"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/btnOrders"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_bottom"
            android:drawableTop="@drawable/history"
            android:text="@string/Orders"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/btnCredit"
            android:layout_weight="1"
            android:background="@drawable/rounded_button_bottom"
            android:drawableTop="@drawable/credit"
            android:text="@string/credite"/>
    </LinearLayout>
</RelativeLayout>
